--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "e3nn_practice"]
 	path = e3nn_practice
-	url = https://github.com/huhlim/e3nn_practice.git
+	url = git@github.com:huhlim/e3nn_practice.git
