--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - numpy
   - scipy
   - scikit-learn
-  - pytorch
+  - pytorch=1.11
   - pytorch-lightning
   - mdtraj
   - openmm
