--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,13 @@
 name = "cg2all"
 version = "0.7"
 description = "Convert coarse-grained protein structure to all-atom structure"
-authors = ["Lim Heo <huhlim@gmail.com>"]
+authors = [
+    "Lim Heo <huhlim@gmail.com>",
+    "Michael Feig <feiglab@gmail.com>",
+]
 license = "Apache-2.0 license"
 readme = "README.md"
+repository = "https://github.com/huhlim/cg2all"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -12,7 +16,6 @@ torch = "^1.11"
 dgl = "^0.9"
 e3nn = "^0.5"
 ml-collections = "^0.1.1"
-biopython = "^1.80"
 numpy = "^1.23"
 mdtraj = {git = "https://github.com/huhlim/mdtraj.git"}
 
