--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,6 @@ pytorch-lightning = "^1.7.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
